# openg2p-program

./: .copier-answers.yml  .pre-commit-config.yaml  .pylintrc  .pylintrc-mandatory  .ruff.toml  CONTRIBUTING.md  README.md  pyproject.toml  requirements.txt  test-pre-requirements.txt  test-requirements.txt
g2p_entitlement_differential/: README.md  README.rst  __manifest__.py
g2p_entitlement_in_kind/: README.md  README.rst  __manifest__.py
g2p_entitlement_voucher/: README.md  README.rst  __manifest__.py
g2p_formio/: README.md  __manifest__.py
g2p_import_dci_api/: __manifest__.py
g2p_mis_importer/: __manifest__.py
g2p_notifications_base/: README.md  __manifest__.py
g2p_notifications_fast2sms/: README.md  __manifest__.py
g2p_notifications_rest_api/: README.md  __manifest__.py
g2p_notifications_voucher/: README.md  __manifest__.py
g2p_notifications_wiserv/: README.md  __manifest__.py
g2p_odk_importer_program/: README.md  __manifest__.py
g2p_openid_vci_programs/: README.md  __manifest__.py
g2p_payment_cash/: README.md  README.rst  __init__.py  __manifest__.py
g2p_payment_files/: README.md  README.rst  __init__.py  __manifest__.py
g2p_payment_g2p_connect/: README.md  README.rst  __manifest__.py
g2p_payment_interop_layer/: README.md  README.rst  __init__.py  __manifest__.py
g2p_payment_phee/: README.md  README.rst  __manifest__.py
g2p_payment_simple_mpesa/: README.rst  __manifest__.py
g2p_payment_sp_con_interop/: README.rst  __manifest__.py
g2p_program_approval/: README.rst  __manifest__.py
g2p_program_assessment/: README.md  README.rst  __manifest__.py
g2p_program_autoenrol/: README.md  README.rst  __manifest__.py
g2p_program_claims/: README.rst  __init__.py  __manifest__.py
g2p_program_cycleless/: README.md  README.rst  __init__.py  __manifest__.py
g2p_program_documents/: README.md  README.rst  __manifest__.py
g2p_program_on_demand_assistance/: README.rst  __manifest__.py
g2p_program_registrant_info/: README.md  README.rst  __manifest__.py
g2p_program_registrant_info_rest_api/: README.md  README.rst  __manifest__.py
g2p_program_reimbursement/: README.md  README.rst  __manifest__.py
g2p_programs/: README.md  README.rst  __manifest__.py
g2p_programs_rest_api/: README.md  README.rst  __manifest__.py
g2p_proxy_means_test/: README.md  README.rst  __init__.py  __manifest__.py
g2p_reimbursement_portal/: README.rst  __manifest__.py
g2p_self_service_portal/: README.md  __init__.py  __manifest__.py
(+597 files in other folders)
