[project]
name = "odoo-addons-openg2p-program"
version = "0.0.0"
dependencies = [
    "odoo-addon-g2p_entitlement_differential @ {root:uri}/g2p_entitlement_differential",
    "odoo-addon-g2p_entitlement_in_kind @ {root:uri}/g2p_entitlement_in_kind",
    "odoo-addon-g2p_entitlement_voucher @ {root:uri}/g2p_entitlement_voucher",
    "odoo-addon-g2p_formio @ {root:uri}/g2p_formio",
    "odoo-addon-g2p_mis_importer @ {root:uri}/g2p_mis_importer",
    "odoo-addon-g2p_notifications_base @ {root:uri}/g2p_notifications_base",
    "odoo-addon-g2p_notifications_fast2sms @ {root:uri}/g2p_notifications_fast2sms",
    "odoo-addon-g2p_notifications_voucher @ {root:uri}/g2p_notifications_voucher",
    "odoo-addon-g2p_notifications_wiserv @ {root:uri}/g2p_notifications_wiserv",
    "odoo-addon-g2p_odk_importer_program @ {root:uri}/g2p_odk_importer_program",
    "odoo-addon-g2p_openid_vci_programs @ {root:uri}/g2p_openid_vci_programs",
    "odoo-addon-g2p_payment_cash @ {root:uri}/g2p_payment_cash",
    "odoo-addon-g2p_payment_files @ {root:uri}/g2p_payment_files",
    "odoo-addon-g2p_payment_g2p_connect @ {root:uri}/g2p_payment_g2p_connect",
    "odoo-addon-g2p_payment_interop_layer @ {root:uri}/g2p_payment_interop_layer",
    "odoo-addon-g2p_payment_phee @ {root:uri}/g2p_payment_phee",
    "odoo-addon-g2p_payment_simple_mpesa @ {root:uri}/g2p_payment_simple_mpesa",
    "odoo-addon-g2p_program_approval @ {root:uri}/g2p_program_approval",
    "odoo-addon-g2p_program_assessment @ {root:uri}/g2p_program_assessment",
    "odoo-addon-g2p_program_autoenrol @ {root:uri}/g2p_program_autoenrol",
    "odoo-addon-g2p_program_cycleless @ {root:uri}/g2p_program_cycleless",
    "odoo-addon-g2p_program_documents @ {root:uri}/g2p_program_documents",
    "odoo-addon-g2p_program_registrant_info @ {root:uri}/g2p_program_registrant_info",
    "odoo-addon-g2p_program_reimbursement @ {root:uri}/g2p_program_reimbursement",
    "odoo-addon-g2p_programs @ {root:uri}/g2p_programs",
    "odoo-addon-g2p_proxy_means_test @ {root:uri}/g2p_proxy_means_test",
    "odoo-addon-g2p_social_registry_importer @ {root:uri}/g2p_social_registry_importer",
    "odoo-addon-g2p_theme @ {root:uri}/g2p_theme",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
bypass-selection = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
